<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Developer helper</string>
    <string name="noButton">Nooo</string>
    <string name="laughterButton">Laughter</string>
    <string name="devilButton">Devil</string>
    <string name="eralashButton">Eralash</string>
    <string name="stopButton">Stop</string>
    <string name="Whip">Whip</string>
    <string name="startService">Start Service</string>
    <string name="stopService">Stop Service</string>
</resources>
